[gd_scene load_steps=8 format=3 uid="uid://ckex26b6ohhog"]

[ext_resource type="Script" uid="uid://cqairrnylytqf" path="res://enemies/enemies/follow_shoot/follow_shoot.gd" id="1_4gxwk"]
[ext_resource type="PackedScene" uid="uid://bgn6skvlyj2v4" path="res://components/health/health_component.tscn" id="2_d8ypv"]
[ext_resource type="Texture2D" uid="uid://qsknxe1kfjr0" path="res://sprites/enemies/evil_ghost.png" id="3_hv0tj"]
[ext_resource type="PackedScene" uid="uid://c6oyye8in20of" path="res://components/damage_zone/damage_zone.tscn" id="4_hv0tj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a6y5m"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_1onfa"]
radius = 14.0357

[sub_resource type="CircleShape2D" id="CircleShape2D_7r7x7"]

[node name="TestEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 36
script = ExtResource("1_4gxwk")
health = 6
metadata/_custom_type_script = "uid://c1q1k3vkaw7da"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a6y5m")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_d8ypv")]
parent = NodePath("..")
health = 3
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("CircleShape2D_1onfa")
debug_color = Color(0.991133, 0, 0.269532, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_hv0tj")

[node name="DamageZone" parent="." instance=ExtResource("4_hv0tj")]
collision_mask = 5
hits_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
shape = SubResource("CircleShape2D_7r7x7")

[node name="RecoilTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_shape_entered" from="DamageZone" to="." method="_on_damage_zone_body_shape_entered"]
[connection signal="timeout" from="RecoilTimer" to="." method="_on_recoil_timer_timeout"]
